[gd_scene load_steps=14 format=3 uid="uid://mwyjdbc31oep"]

[ext_resource type="FontFile" uid="uid://ci1tr875gml4b" path="res://assets/DynaPuff/DynaPuff-Bold.ttf" id="1_5p8wc"]
[ext_resource type="Theme" uid="uid://cb266ecfib6xp" path="res://assets/main_theme.tres" id="1_r6d6q"]
[ext_resource type="Script" uid="uid://bkhxv32j3wk55" path="res://scenes/settings.gd" id="2_6wm04"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r6d6q"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.235294, 0.756863, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_6wm04"]
font = ExtResource("1_5p8wc")
font_size = 115
font_color = Color(0.236816, 0.757813, 0, 1)
outline_size = 40

[sub_resource type="Animation" id="Animation_f4mfi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6wm04"]
resource_name = "stretch"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_es4n0"]
_data = {
&"RESET": SubResource("Animation_f4mfi"),
&"stretch": SubResource("Animation_6wm04")
}

[sub_resource type="LabelSettings" id="LabelSettings_f4mfi"]
font = ExtResource("1_5p8wc")
font_size = 30
font_color = Color(0.235294, 0.756863, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wm04"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.235294, 0.756863, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Animation" id="Animation_gis3k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.129412, 0.129412, 0.129412, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_es4n0"]
resource_name = "open"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(-4, -4),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.129412, 0.129412, 0.129412, 0), Color(0.129412, 0.129412, 0.129412, 0.627451)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0200463),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gis3k"]
_data = {
&"RESET": SubResource("Animation_gis3k"),
&"open": SubResource("Animation_es4n0")
}

[node name="settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r6d6q")
script = ExtResource("2_6wm04")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -421.0
offset_top = -203.0
offset_right = 422.0
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(421, 227)
theme_override_styles/panel = SubResource("StyleBoxFlat_r6d6q")

[node name="title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -289.0
offset_right = 320.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 69)
mouse_filter = 0
text = "Settings"
label_settings = SubResource("LabelSettings_6wm04")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/title"]
libraries = {
&"": SubResource("AnimationLibrary_es4n0")
}
autoplay = "stretch"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -317.0
offset_top = -143.0
offset_right = 317.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="HBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="master_vol_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Master Volume - 100%"
label_settings = SubResource("LabelSettings_f4mfi")

[node name="master_vol" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="music_vol_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume - 50%"
label_settings = SubResource("LabelSettings_f4mfi")

[node name="music_vol" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="sfx_vol_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "SFX Volume - 50%"
label_settings = SubResource("LabelSettings_f4mfi")

[node name="sfx_vol" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="back" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = 181.0
offset_right = 110.5
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6wm04")
text = "Close"

[node name="button_rotate" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gis3k")
}

[connection signal="pressed" from="Panel/back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="button_rotate" to="." method="_on_button_rotate_timeout"]
